# Zace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  bst.ts  eslint.config.js  package.json  pyproject.toml
python/zace_textual_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/zace_tui/: __init__.py  app.py  bridge_client.py  main.py  models.py  protocol.py  theme.tcss
src/: index.ts
src/agent/: approval.ts  compaction.ts  completion.ts  docs.ts  executor.ts  guardrails.ts  loop.ts  memory.ts  observer.ts  planner-schema.ts  planner.ts  safety.ts  scripts.ts  stability.ts  state.ts  stream-callbacks.test.ts  stream-events.ts
src/brain/: context-builder.ts  file-importance-ranker.ts  index.ts  memory-graph-manager.ts  memory-manager.ts  memory-retriever.ts  paths.ts  repo-mapper.ts  session-logger.ts  task-planner.ts  types.ts
src/cli/: chat-session.test.ts  chat-session.ts  program.ts
src/config/: env.ts
src/llm/: client.ts  stream-adapter.ts  types.ts
src/lsp/: client.ts  config.ts  index.ts
src/permission/: guard.ts  memory.ts  next.ts  pending.ts  resolve.ts  store.ts
src/prompts/: executor.ts  planner.ts  safety.ts  session-title.ts  system.ts
src/session/: ids.ts  message-v2.ts  session-title.ts  store-jsonl.ts  store.ts  to-model-messages.ts
src/tools/: bash.ts  fs.ts  git.ts  index.ts  registry.ts  search.ts  session-history.ts  session.ts  shell.ts
src/types/: agent.ts  config.ts  tool.ts
src/ui/: app.tsx  buffer.test.ts  buffer.ts  event-model.test.ts  event-model.ts  index.ts  plain-fallback.ts  (+2 more)
(+153 files in other folders)
